# runcostai

./: .gitignore  README.md  __init__.py  _db.py  _errors.py  _pricing.py  cli.py  demo.py  pyproject.toml  test_basic.py
runcost/: __init__.py  _pricing.py  claude.py  cli.py  gemini.py  server.py
runcost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_basic.py
