[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runcost"
version = "0.2.3"
description = "Drop-in cost intelligence for Python AI agent frameworks."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.8"
keywords = ["ai", "agents", "llm", "cost", "openai", "crewai", "langgraph"]
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
runcost = "runcost.cli:main"

[project.urls]
Homepage = "https://cost.run"
Repository = "https://github.com/Picasso976/runcostai"

[tool.setuptools.packages.find]
where = ["."]
include = ["runcost*"]